# advanced-show-control

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_REVIEW.md  Cargo.toml  IDEAS.md  Makefile  PHASES.md  PROJECT.md  README.md  package-lock.json  package.json  research.md
.config/: nextest.toml
.github/workflows/: ci.yml
designs/: README.md
docs/: architecture.md  coding-conventions.md  lv1-osc.md  phase-1-hardware-validation.md  roadmap.md  scene-tracking.md  tcp-handling.md
sdd/: final-fix-report.md  task-12-report.md  task-3-report.md  task-6-report.md  task-8-report.md
src/: lib.rs  main.rs  osc.rs  vegas.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.debug.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  connection_preferences.rs  connection_state.rs  diagnostics.rs  lib.rs  logging.rs  main.rs  scene_recall_fader.rs  show_file.rs  time.rs  vegas.rs
src-tauri/src/app_state/: capture.rs  capture_tests.rs  events.rs  events_tests.rs  logs.rs  mod.rs  projection.rs  scene_recall.rs  scene_recall_tests.rs  shell.rs  show_file_mapping.rs  show_file_mapping_tests.rs  test_support.rs  view.rs
src-tauri/src/fade/: actor.rs  commands.rs  fader_law.rs  handle.rs  mod.rs  state.rs
src-tauri/src/lifecycle/: mod.rs
src-tauri/src/lv1/: actor.rs  commands.rs  discovery.rs  handle.rs  mod.rs  osc.rs  parsers.rs  probe.rs  state.rs  tcp.rs
src-tauri/src/projector/: cache.rs  mod.rs  runtime.rs  view.rs
src-tauri/src/runtime/: commands.rs  errors.rs  events.rs  generation.rs  mod.rs
src-tauri/src/scene_recall/: actor.rs  commands.rs  handle.rs  mod.rs  policy.rs  state.rs
src-tauri/src/scenes/: actor.rs  capture.rs  commands.rs  events.rs  handle.rs  mod.rs  policy.rs  scene_alignment.rs  state.rs  types.rs
src-tauri/src/settings/: actor.rs  commands.rs  events.rs  handle.rs  mod.rs  state.rs  types.rs
src-tauri/src/show/: actor.rs  capture.rs  commands.rs  events.rs  handle.rs  mod.rs  scene_alignment.rs  show_file.rs  state.rs  types.rs
src-tauri/src/smoke/: mod.rs  runner.rs  tests.rs  trace_capture.rs
src-tauri/src/ui/: commands.rs  debug.rs  menu.rs  mod.rs
src-tauri/src/ui/commands/: fade.rs  lifecycle.rs  scene_recall.rs  scenes.rs  settings.rs  show.rs
src-tauri/src/ui/debug/: commands.rs
src-tauri/tests/: fade_engine.rs  lv1_actor.rs  manifest.rs  runtime_bus.rs
src/fade/: actor.rs  commands.rs  curve.rs  engine.rs  events.rs  fader_law.rs  handle.rs  mod.rs  state.rs  tick.rs  types.rs
src/lv1/: actor.rs  commands.rs  diagnostics.rs  discovery.rs  events.rs  handle.rs  messages.rs  mod.rs  model.rs  parsers.rs  probe.rs  state.rs  tcp.rs  types.rs
src/runtime/: commands.rs  dispatcher.rs  events.rs  mod.rs
src/scene_recall/: actor.rs  events.rs  mod.rs  policy.rs  state.rs
src/show/: actor.rs  capture.rs  commands.rs  events.rs  handle.rs  mod.rs  state.rs  types.rs
tests/: fade_engine.rs  lv1_actor.rs  runtime_bus.rs
ui/: Dockerfile.visual  debug.html  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts  vitest.workspace.ts
ui/.storybook/: main.ts  preview.ts
ui/scripts/: update-visual-snapshots-ci.sh
ui/src/: App.tsx  types.ts  (+15 more)
(+223 files in other folders)
