[package]
name = "lv1-scene-fade-utility"
version = "0.1.0"
edition = "2024"

[lib]
name = "lv1_scene_fade_utility"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.8", features = ["v4"] }
