[package]
name = "lv1-scene-fade-utility"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[workspace]
members = [".", "src-tauri"]
resolver = "2"

[lib]
name = "lv1_scene_fade_utility"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = { version = "0.5", features = ["all"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.8", features = ["v4"] }
