[package]
name = "advanced-show-control-tauri"
version = "0.1.0"
description = "Desktop shell for Advanced Show Control"
edition = "2024"
license = "GPL-3.0-or-later"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
advanced-show-control = { path = ".." }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
rfd = "0.15"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros"] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros", "test-util"] }
