[package]
name = "advanced-show-control"
version = "0.1.0"
description = "Desktop app for Advanced Show Control"
edition = "2024"
license = "GPL-3.0-or-later"
default-run = "advanced-show-control"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = { version = "0.5", features = ["all"] }
tauri = { version = "2", features = [] }
thiserror = "2.0"
tokio = { version = "1", features = ["full", "test-util"] }
tracing = { version = "0.1.44", features = ["attributes"] }
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
